# gtest-demo

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.cache/clangd/index/: ast.hpp.F67EC7179E4F0E1F.idx  example.cpp.70112B947DC6078C.idx  example.h.4608E5238812A89D.idx  example_add.cpp.C7FE7246116FC31F.idx  example_subtract.cpp.5023E244823123C5.idx  parser.cpp.AF8F91428DE4F4CD.idx  parser.hpp.CCEF9BAC44E7C89B.idx  testParser.cpp.4156B673E32249D5.idx  testTokenizer.cpp.A0791C54FB0A9F82.idx  tokenizer.cpp.FB3EBFB6B475A6B0.idx  tokenizer.h.649BDD7E7A00DA03.idx  tokenizer.hpp.6FABEBFB7824B360.idx
src/: CMakeLists.txt  ast.hpp  parser.hpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp
test/: CMakeLists.txt  testParser.cpp  testTokenizer.cpp
